Bug 68740 - lngconvex: Duplicated ms id 0 found
Summary: lngconvex: Duplicated ms id 0 found
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-30 06:47 UTC by Andras Timar
Modified: 2013-08-30 12:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2013-08-30 06:47:03 UTC
I build master --with-lang=en-US de hu on Windows.

libreoffice@WIN-06391Q750A2 /cygdrive/c/lo/libo-master
$ S=C:/lo/libo-master && O=$S/solver/wntmsci13.pro && W=$S/workdir/wntmsci13.pro &&  cd $S/shell/source/win32/shlxthandler/res && BRAND_BASE_DIR=file:///$O/unittest/install PATH="C:\lo\libo-master\solver\wntmsci13.pro\bin"  $O/bin/lngconvex.exe -ulf $W/CustomTarget/shell/source/win32/shlxthandler/res/shlxthdl.ulf -rc $W/CustomTarget/shell/source/win32/shlxthandler/res/shlxthdl_impl.rc -rct rctmpl.txt -rch rcheader.txt -rcf rcfooter.txt
ERROR: Duplicated ms id 0 found for the languages de and hu !!!! This does not work in microsoft resources
Please remove one!

See http://opengrok.libreoffice.org/xref/core/shell/source/tools/lngconvex/lngconvex.cxx#351

It used to work a few days ago.
Comment 1 Commit Notification 2013-08-30 11:39:06 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f1d47f8246b5513fa3a54ff16de4b1f4dd647ab

attempt to roughly fix fdo#68740



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2013-08-30 12:04:58 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40ff64b93fc4c4c2e2710853e9f71e35811b9362

and another one for fdo#68740



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Andras Timar 2013-08-30 12:35:20 UTC
It seems to be fixed according to my tests. Thanks!