attempt to roughly fix fdo#68740

Actually that map wants a resolved fallback locale, not just a language
to ID mapping, which light fallback was a side effect of
MsLangId::convertIsoNamesToLanguage() and eliminated with the latest
changes to LanguageTag conversion.

Change-Id: I32f632c6b198383dd3eda8538ccb801c9275baca